--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -92,6 +92,9 @@
     .header {
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 {%- endstyle -%}
