ajuste header espaco entre menu e logo

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -21,7 +21,6 @@
   {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
     .scrolled-past-header .header__heading-logo-wrapper {
       width: 75%;
-      margin-right: 2rem;
     }
   {%- endif -%}
 
@@ -103,6 +102,10 @@
     .header__icons {
     margin-left: auto;
     }
+
+    .header__heading-logo-wrapper {
+     margin-right: 2rem;
+     }
 
   }
 {%- endstyle -%}
