--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -278,7 +278,7 @@
 
 @media screen and (min-width: 750px) {
   .banner__content {
-    padding: 5rem;
+    padding: 0 !important;
   }
 
   .banner__content--top-left {
