--- a/assets/base.css
+++ b/assets/base.css
@@ -78,8 +78,10 @@
 
 .page-width {
   max-width: var(--page-width);
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
@@ -102,7 +104,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 @media screen and (min-width: 750px) {
   .page-width {
-    padding: 0 5rem;
+    padding: 0;
   }
 
   .header.page-width,
