--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -143,9 +143,11 @@
                     href="{{ block.settings.button_link_1 }}"
                   {% endif %}
                   class="button{% if block.settings.button_style_secondary_1 %} button--secondary{% else %} button--primary{% endif %}"
+                  style="background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
                 >
                   {{- block.settings.button_label_1 | escape -}}
                 </a>
+                
               {%- endif -%}
               {%- if block.settings.button_label_2 != blank -%}
                 <a
@@ -155,9 +157,11 @@
                     href="{{ block.settings.button_link_2 }}"
                   {% endif %}
                   class="button{% if block.settings.button_style_secondary_2 %} button--secondary{% else %} button--primary{% endif %}"
+                  style="background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
                 >
                   {{- block.settings.button_label_2 | escape -}}
                 </a>
+                
               {%- endif -%}
             </div>
           {%- endcase -%}
@@ -488,6 +492,20 @@
           "unit": "px",
           "label": "Margem direita do botão",
           "default": 0
+        },
+
+        {
+          "type": "color",
+          "id": "button_text_color",
+          "label": "Cor do texto do botao",
+          "default": "ffffff"
+        },
+
+        {
+          "type": "color",
+          "id": "button_bg_color",
+          "label": "Cor de fundo do botao",
+          "default": "000000"
         }
       ]
     }
