ajustando a cor para hexadecimal

--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -498,14 +498,14 @@
           "type": "color",
           "id": "button_text_color",
           "label": "Cor do texto do botao",
-          "default": "ffffff"
+          "default": "#ffffff"
         },
 
         {
           "type": "color",
           "id": "button_bg_color",
           "label": "Cor de fundo do botao",
-          "default": "000000"
+          "default": "#000000"
         }
       ]
     }
