--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -129,7 +129,10 @@
             <div class="banner__text rte {{ block.settings.text_style }}" {{ block.shopify_attributes }}>
               <p>{{ block.settings.text }}</p>
             </div>
+            
           {%- when 'buttons' -%}
+            {%- assign alpha = block.settings.button_opacity | default: 100 | divided_by: 100 -%}
+          
             <div
               class="banner__buttons{% if block.settings.button_label_1 != blank and block.settings.button_label_2 != blank %} banner__buttons--multiple{% endif %}"
               {{ block.shopify_attributes }}
@@ -143,12 +146,12 @@
                     href="{{ block.settings.button_link_1 }}"
                   {% endif %}
                   class="button{% if block.settings.button_style_secondary_1 %} button--secondary{% else %} button--primary{% endif %}"
-                  style="background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
+                  style="--alpha-button-background: {{ alpha }}; background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
                 >
                   {{- block.settings.button_label_1 | escape -}}
                 </a>
-                
               {%- endif -%}
+          
               {%- if block.settings.button_label_2 != blank -%}
                 <a
                   {% if block.settings.button_link_2 == blank %}
@@ -157,14 +160,14 @@
                     href="{{ block.settings.button_link_2 }}"
                   {% endif %}
                   class="button{% if block.settings.button_style_secondary_2 %} button--secondary{% else %} button--primary{% endif %}"
-                  style="background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
+                  style="--alpha-button-background: {{ alpha }}; background-color: {{ block.settings.button_bg_color }}; color: {{ block.settings.button_text_color }};"
                 >
                   {{- block.settings.button_label_2 | escape -}}
                 </a>
-                
               {%- endif -%}
             </div>
           {%- endcase -%}
+          
           
       {%- endfor -%}
     </div>
@@ -506,6 +509,17 @@
           "id": "button_bg_color",
           "label": "Cor de fundo do botao",
           "default": "#000000"
+        },
+
+        {
+          "type": "range",
+          "id": "button_opacity",
+          "min": 0,
+          "max": 100,
+          "step": 5,
+          "unit": "%",
+          "label": "Opacidade do botão",
+          "default": 100
         }
       ]
     }
